--- a/package.json
+++ b/package.json
@@ -24,13 +24,18 @@
     "@angular/service-worker": "^17.0.2",
     "@capacitor/android": "5.6.0",
     "@capacitor/app": "5.0.6",
+    "@capacitor/browser": "^5.2.0",
     "@capacitor/core": "5.6.0",
     "@capacitor/haptics": "5.0.6",
     "@capacitor/ios": "5.6.0",
     "@capacitor/keyboard": "5.0.7",
+    "@capacitor/splash-screen": "^5.0.7",
     "@capacitor/status-bar": "5.0.6",
     "@ionic/angular": "^7.0.0",
+    "@ionic/storage": "^4.0.0",
+    "@ionic/storage-angular": "^4.0.0",
     "ionicons": "^7.0.0",
+    "ng-lazyload-image": "^9.1.3",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.2"
